--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "react-tic-tac-toe",
+  "homepage": "https://ericmathison.github.io/react-tic-tac-toe",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
