--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
+    "@testing-library/dom": "^8.3.0",
+    "@testing-library/user-event": "^13.2.1",
     "react-scripts": "4.0.3"
   },
   "scripts": {
